--- a/hw23_webserver/src/main/resources/templates/admin.html
+++ b/hw23_webserver/src/main/resources/templates/admin.html
@@ -6,7 +6,7 @@
 <body>
 <div class="top">
     <br/>
-    <form action="save" method="post">
+    <form action="user/save" method="post">
         <label>
             name <br/>
             <input type="text" name="name" value="">
